<resources>
    <string name="app_name">hans.ai</string>
    <string name="title_home">Home</string>
    <string name="title_track">Track</string>
    <string name="title_recipes">Recipes</string>
    <string name="title_settings">Settings</string>
    <string name="title_profile">Profile</string>
    <string name="title_create_log">Create Log</string>
    <string name="title_create_recipe">Create Recipe</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="navigate_before">Navigate Before</string>
    <string name="navigate_next">Navigate Next</string>
    <string name="log_emoji">Log Emoji</string>
    <string name="expand_details">Expand Details</string>
    <string name="fab_content_desc">Add New Entry</string>
    <string name="food_thumbnail">Food Thumbnail</string>
    <string name="knife_and_fork_emoji">🍴 </string>
    <string name="alarm_clock_emoji">⏰ </string>
    <string name="dot_divider">" • "</string>
    <string name="action_button">Action Button</string>
    <string name="searchbar_hint">What would you like to eat?</string>
    <string name="title_search">Search</string>
    <string name="add_meal">Add a meal</string>
    <string name="add_log_title">Add log title</string>
    <string name="add_summary">Add summary</string>
    <string name="save_log">Save Log</string>
    <string name="save">Save</string>
    <string name="daily_limit">Daily Limit:</string>
    <string name="minus">-</string>
    <string name="current_intake">Current Intake:</string>
    <string name="equal">=</string>
    <string name="total_left">Total Left:</string>
    <string name="ingredients">Ingredients</string>
    <string name="step_by_step">Step by step</string>
    <string name="total_calorie">"Total Calories: "</string>
    <string name="chat_hint">Resep nasi liwet rendah kalori</string>
    <string name="send_button">Send Button</string>
    <string name="ingredients_hint">1. 500 gr Nasi Putih\n2. 2 butir telur ayam\n3. …</string>
    <string name="steps_hint">1. Iris 5 siung bawang merah dan putih\n2. Pisahkan kuning telur dengan putih telur\n3. …</string>
    <string name="carbs">Carbs (gr):</string>
    <string name="protein">Protein (gr):</string>
    <string name="fat">Fat (gr):</string>
    <string name="zero">0</string>
    <string name="save_recipe">Save Recipe</string>
    <string name="today">Today</string>
    <string name="base_goal">Today\'s Goal</string>
    <string name="intake">Current Intake</string>
    <string name="remainder">Remaining</string>
    <string name="calories">Calories</string>
    <string name="macronutrients">Macronutrients</string>
    <string name="title_carbs">Carbohydrate</string>
    <string name="title_protein">Protein</string>
    <string name="title_fat">Fat</string>
    <string name="extended_fab_label">Generate Recipe</string>
    <string name="home_subhead">Here are your stats for today!</string>
    <string name="empty_search">No results found</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="redirect_button">Add food to your log!</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="kcal_placeholder">0 kcal</string>
    <string name="grams_placeholder">0 gr</string>
    <string name="greetings_placeholder">Hello, %1$s!</string>
    <string name="base_goal_unit">kcal</string>
    <string name="summary_lbs">" lbs • "</string>
    <string name="current_weight">Current Weight (in lbs)</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="placeholder_ingredients">Ayam, Nasi Merah, Lengkuas, …</string>
    <string name="generate">Generate Recipe</string>
    <string name="title_dialog">What\'s on your pantry?</string>
    <string name="trophy_icon">Trophy Icon</string>
    <string name="current_weight_title">Current Weight</string>
    <string name="target_weight_title">Target Weight</string>
    <string name="lbs_placeholder">0 lbs</string>
</resources>