<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingVertical="24dp"
    android:paddingHorizontal="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
        android:text="@string/title_dialog" />

    <EditText
        android:id="@+id/ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="8dp"
        android:hint="@string/placeholder_ingredients"
        android:importantForAutofill="no"
        android:inputType="text"
        android:minHeight="48dp"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

    <Button
        android:id="@+id/saveRecipeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/generate" />
</LinearLayout>