<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:id="@+id/titleSection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <EditText
            android:id="@+id/logTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
            android:hint="@string/add_log_title"
            android:textColorHint="@color/md_theme_outline"
            android:importantForAutofill="no"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/logSummary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@null"
            android:inputType="text"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:hint="@string/add_summary"
            android:textColorHint="@color/md_theme_outline"
            android:importantForAutofill="no"
            tools:ignore="TouchTargetSizeCheck" />

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            app:dividerColor="@color/md_theme_outlineVariant" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleSection"
        app:layout_constraintBottom_toTopOf="@id/bottomBar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                android:text="@string/breakfast" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvBreakfast"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="2"
                tools:listitem="@layout/item_recipe" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                layout="@layout/item_add_meal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                android:text="@string/lunch" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvLunch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="2"
                tools:listitem="@layout/item_recipe" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                layout="@layout/item_add_meal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
                android:text="@string/dinner" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvDinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:itemCount="2"
                tools:listitem="@layout/item_recipe" />

            <include
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                layout="@layout/item_add_meal" />

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/colorSurfaceContainerHigh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/dailyLimitLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/daily_limit"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/minus" />

        <TextView
            android:id="@+id/dailyLimit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textColor="?attr/colorPrimary"
            android:textStyle="bold"
            android:text="@string/kcal_placeholder"
            app:layout_constraintBottom_toTopOf="@id/saveButton"
            app:layout_constraintStart_toStartOf="@id/dailyLimitLabel"
            app:layout_constraintTop_toBottomOf="@id/dailyLimitLabel" />

        <TextView
            android:id="@+id/minus"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.LogoLarge"
            android:textColor="@color/md_theme_onSurface"
            android:textAlignment="center"
            android:text="@string/minus"
            app:layout_constraintStart_toEndOf="@id/dailyLimitLabel"
            app:layout_constraintEnd_toStartOf="@id/totalIntakeLabel"
            app:layout_constraintTop_toTopOf="@id/dailyLimitLabel"
            app:layout_constraintBottom_toBottomOf="@id/dailyLimit" />

        <TextView
            android:id="@+id/totalIntakeLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/current_intake"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/minus"
            app:layout_constraintEnd_toStartOf="@id/equal" />

        <TextView
            android:id="@+id/totalIntake"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="?attr/colorGreen"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/kcal_placeholder"
            app:layout_constraintTop_toBottomOf="@id/totalIntakeLabel"
            app:layout_constraintStart_toStartOf="@id/totalIntakeLabel" />

        <TextView
            android:id="@+id/equal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.LogoLarge"
            android:textColor="@color/md_theme_onSurface"
            android:textAlignment="center"
            android:text="@string/equal"
            app:layout_constraintStart_toEndOf="@id/totalIntakeLabel"
            app:layout_constraintEnd_toStartOf="@id/totalLeftLabel"
            app:layout_constraintTop_toTopOf="@id/totalIntakeLabel"
            app:layout_constraintBottom_toBottomOf="@id/totalIntake" />

        <TextView
            android:id="@+id/totalLeftLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
            android:text="@string/total_left"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/equal"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/totalLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:text="@string/kcal_placeholder"
            app:layout_constraintTop_toBottomOf="@id/totalLeftLabel"
            app:layout_constraintStart_toStartOf="@id/totalLeftLabel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_log"
            app:icon="@drawable/ic_inbox"
            app:iconGravity="textStart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>