<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="?attr/actionBarSize">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <!-- Content Section -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomBar">

            <!-- Content -->
            <LinearLayout
                android:id="@+id/titleSection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <EditText
                    android:id="@+id/recipeTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:textStyle="bold"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
                    android:hint="@string/add_log_title"
                    android:textColorHint="?attr/colorOnSurfaceVariant"
                    android:importantForAutofill="no"
                    tools:ignore="TouchTargetSizeCheck" />

                <EditText
                    android:id="@+id/recipeDescription"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:background="@null"
                    android:hint="@string/add_summary"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
                    android:textColorHint="?attr/colorOnSurfaceVariant"
                    tools:ignore="TouchTargetSizeCheck" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    app:dividerColor="@color/md_theme_outlineVariant" />

                <TextView
                    android:id="@+id/ingredientsTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ingredients"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <EditText
                    android:id="@+id/ingredients"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="100dp"
                    android:lineSpacingExtra="4sp"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:hint="@string/ingredients_hint"
                    android:inputType="text|textMultiLine"
                    android:gravity="top" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginVertical="16dp"
                    app:dividerColor="@color/md_theme_outlineVariant" />

                <TextView
                    android:id="@+id/stepByStepTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/step_by_step"
                    android:textAppearance="@style/TextAppearance.Material3.TitleLarge" />

                <EditText
                    android:id="@+id/stepByStep"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="100dp"
                    android:lineSpacingExtra="4sp"
                    android:background="@null"
                    android:importantForAutofill="no"
                    android:hint="@string/steps_hint"
                    android:inputType="text|textMultiLine"
                    android:gravity="top" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

    <!-- Bottom App Bar Section -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:background="?attr/colorSurfaceContainerHigh"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/totalCalorieLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/total_calorie"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/totalCalorie"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/vertDiv" />

        <TextView
            android:id="@+id/totalCalorie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/totalCalorieLabel"
            app:layout_constraintStart_toStartOf="@id/totalCalorieLabel"
            app:layout_constraintBottom_toTopOf="@id/saveButton"
            tools:text="-" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/vertDiv"
            android:layout_width="1dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="@id/totalCalorieLabel"
            app:layout_constraintBottom_toBottomOf="@id/totalCalorie"
            app:layout_constraintStart_toEndOf="@id/totalCalorieLabel"
            app:layout_constraintEnd_toStartOf="@id/carbsLabel" />

        <TextView
            android:id="@+id/carbsLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/carbs"
            app:layout_constraintTop_toTopOf="@id/totalCalorieLabel"
            app:layout_constraintStart_toEndOf="@id/vertDiv"
            app:layout_constraintEnd_toStartOf="@id/proteinLabel" />

        <EditText
            android:id="@+id/inputCarbs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minWidth="48dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/totalCalorie"
            app:layout_constraintStart_toStartOf="@id/carbsLabel"
            app:layout_constraintTop_toBottomOf="@id/carbsLabel"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/proteinLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/protein"
            app:layout_constraintTop_toTopOf="@id/totalCalorieLabel"
            app:layout_constraintStart_toEndOf="@id/carbsLabel"
            app:layout_constraintEnd_toStartOf="@id/fatLabel" />

        <EditText
            android:id="@+id/inputProtein"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minWidth="48dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/totalCalorie"
            app:layout_constraintStart_toStartOf="@id/proteinLabel"
            app:layout_constraintTop_toBottomOf="@id/proteinLabel"
            tools:ignore="TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/fatLabel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textStyle="bold"
            android:textAppearance="@style/TextAppearance.Material3.LabelMedium"
            android:text="@string/fat"
            app:layout_constraintTop_toTopOf="@id/totalCalorieLabel"
            app:layout_constraintStart_toEndOf="@id/proteinLabel"
            app:layout_constraintEnd_toEndOf="parent" />

        <EditText
            android:id="@+id/inputFat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:hint="@string/zero"
            android:importantForAutofill="no"
            android:inputType="number"
            android:minWidth="48dp"
            android:textAppearance="@style/TextAppearance.Material3.BodyLarge"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/totalCalorie"
            app:layout_constraintStart_toStartOf="@id/fatLabel"
            app:layout_constraintTop_toBottomOf="@id/fatLabel"
            tools:ignore="TouchTargetSizeCheck" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/save_recipe"
            app:icon="@drawable/ic_inbox"
            app:iconGravity="textStart"
            app:layout_constraintTop_toBottomOf="@id/totalCalorie"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>